[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/TilsetBuilder_Plugin/TilesetBuilderDock.gd" type="Script" id=1]
[ext_resource path="res://addons/TilsetBuilder_Plugin/icon.png" type="Texture" id=2]

[node name="TilesetBuilderDock" type="Panel"]
margin_right = 160.0
margin_bottom = 312.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 72.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="LineEdit_w" type="LineEdit" parent="."]
margin_left = 74.0
margin_top = 48.0
margin_right = 148.0
margin_bottom = 72.0
text = "16"
caret_blink = true

[node name="Label_w" type="Label" parent="."]
margin_left = 8.0
margin_top = 48.0
margin_right = 50.0
margin_bottom = 62.0
text = "Width:"

[node name="Label_h" type="Label" parent="."]
margin_left = 8.0
margin_top = 80.0
margin_right = 48.0
margin_bottom = 94.0
text = "Height:"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 74.0
margin_top = 80.0
margin_right = 148.0
margin_bottom = 104.0
text = "16"
caret_blink = true

[node name="Button_ADD" type="Button" parent="."]
margin_left = 128.0
margin_top = 256.0
margin_right = 148.0
margin_bottom = 276.0
text = "+"

[node name="Button_EXP" type="Button" parent="."]
margin_left = 9.0
margin_top = 284.0
margin_right = 149.0
margin_bottom = 304.0
text = "Export Tileset"

[node name="Button_DEL" type="Button" parent="."]
margin_left = 100.0
margin_top = 256.0
margin_right = 120.0
margin_bottom = 276.0
text = "-"

[node name="FileDialog_OPEN_PNG" type="FileDialog" parent="."]
margin_right = 512.0
margin_bottom = 320.0
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.png" )
current_file = "*.png"
current_path = "res://*.png"

[node name="FileDialog_SAVE" type="FileDialog" parent="."]
margin_right = 275.0
margin_bottom = 130.0
window_title = "Save Tileset resource file"

[node name="ItemList" type="ItemList" parent="."]
margin_left = 7.0
margin_top = 111.0
margin_right = 153.0
margin_bottom = 248.0
icon_scale = 0.5

